// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`htmlToPayloadLexical with real EPUB fixtures > produces at least one substantive chapter from Coraline (Calibre fiction) 1`] = `
{
  "root": {
    "children": [
      {
        "children": [
          {
            "detail": 0,
            "format": 2,
            "mode": "normal",
            "style": "",
            "text": "[Image: SVG diagram]",
            "type": "text",
            "version": 1,
          },
        ],
        "direction": "ltr",
        "format": "",
        "indent": 0,
        "textFormat": 0,
        "textStyle": "",
        "type": "paragraph",
        "version": 1,
      },
    ],
    "direction": "ltr",
    "format": "",
    "indent": 0,
    "type": "root",
    "version": 1,
  },
}
`;

exports[`htmlToPayloadLexical with real EPUB fixtures > produces at least one substantive chapter from Disrupting the Game (EPUB3 non-fiction) 1`] = `
{
  "root": {
    "children": [
      {
        "children": [
          {
            "detail": 0,
            "format": 2,
            "mode": "normal",
            "style": "",
            "text": "[Image: SVG diagram]",
            "type": "text",
            "version": 1,
          },
        ],
        "direction": "ltr",
        "format": "",
        "indent": 0,
        "textFormat": 0,
        "textStyle": "",
        "type": "paragraph",
        "version": 1,
      },
    ],
    "direction": "ltr",
    "format": "",
    "indent": 0,
    "type": "root",
    "version": 1,
  },
}
`;

exports[`htmlToPayloadLexical with real EPUB fixtures > produces at least one substantive chapter from Fast Python (Manning technical) 1`] = `
{
  "root": {
    "children": [
      {
        "children": [
          {
            "detail": 0,
            "format": 2,
            "mode": "normal",
            "style": "",
            "text": "[Image: SVG diagram]",
            "type": "text",
            "version": 1,
          },
        ],
        "direction": "ltr",
        "format": "",
        "indent": 0,
        "textFormat": 0,
        "textStyle": "",
        "type": "paragraph",
        "version": 1,
      },
    ],
    "direction": "ltr",
    "format": "",
    "indent": 0,
    "type": "root",
    "version": 1,
  },
}
`;

exports[`htmlToPayloadLexical with real EPUB fixtures > produces at least one substantive chapter from The Wild Robot Escapes (Vietnamese) 1`] = `
{
  "root": {
    "children": [
      {
        "children": [
          {
            "detail": 0,
            "format": 0,
            "mode": "normal",
            "style": "",
            "text": "The Wild Robot Escapes",
            "type": "text",
            "version": 1,
          },
        ],
        "direction": "ltr",
        "format": "",
        "indent": 0,
        "tag": "h1",
        "type": "heading",
        "version": 1,
      },
      {
        "children": [
          {
            "detail": 0,
            "format": 0,
            "mode": "normal",
            "style": "",
            "text": "Ban dich tieng Viet",
            "type": "text",
            "version": 1,
          },
        ],
        "direction": "ltr",
        "format": "",
        "indent": 0,
        "textFormat": 0,
        "textStyle": "",
        "type": "paragraph",
        "version": 1,
      },
      {
        "children": [
          {
            "detail": 0,
            "format": 0,
            "mode": "normal",
            "style": "",
            "text": "Peter Brown",
            "type": "text",
            "version": 1,
          },
        ],
        "direction": "ltr",
        "format": "",
        "indent": 0,
        "textFormat": 0,
        "textStyle": "",
        "type": "paragraph",
        "version": 1,
      },
      {
        "children": [
          {
            "detail": 0,
            "format": 0,
            "mode": "normal",
            "style": "",
            "text": "April 2026",
            "type": "text",
            "version": 1,
          },
        ],
        "direction": "ltr",
        "format": "",
        "indent": 0,
        "textFormat": 0,
        "textStyle": "",
        "type": "paragraph",
        "version": 1,
      },
    ],
    "direction": "ltr",
    "format": "",
    "indent": 0,
    "type": "root",
    "version": 1,
  },
}
`;
